feat: modified config files

--- a/reviewer-frontend/src/index.css
+++ b/reviewer-frontend/src/index.css
@@ -21,7 +21,16 @@
     
 }
 
-
 *{
     font-family: 'BoschSans';
+}
+
+
+
+#menu-dropdown {
+
+}
+
+#menu-dropdown::-webkit-scrollbar {
+    background-color: transparent;
 }
