feat: new style for scroll bar

--- a/reviewer-frontend/src/index.css
+++ b/reviewer-frontend/src/index.css
@@ -25,10 +25,8 @@
     font-family: 'BoschSans';
 }
 
-
-
-#menu-dropdown {
-
+#tableUser::-webkit-scrollbar{
+    background-color: transparent;
 }
 
 #menu-dropdown::-webkit-scrollbar {
